--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -8,6 +8,14 @@
     width: 100%;
 }
 
+.navbar-light .navbar-toggler-icon {
+    background-image: url('../picture/navbar.png')!important;
+    width:25px!important;
+    height: 25px!important;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .logo{
     width: 100px!important;
 }
@@ -19,6 +27,10 @@
     margin-right: 20px!important;
 }
 
+.nav-link:hover{
+    color: #0275d8!important;
+}
+
 .dropdown-item{
     color: #010e1b;
 }
@@ -26,4 +38,8 @@
 .dropdown-menu{
     border-radius: 0px!important;
     box-shadow: 0px 2px 8px rgba(0,0,0,0.2);
+}
+
+.link{
+    text-decoration: none!important;
 }
