--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,36 +1,37 @@
-.hero-leisure{
+.hero-contact{
     padding: 0px!important;
-    animation-name: hero-anim-leisure;
+    animation-name: hero-anim-contact;
     animation-duration: 20s;
+    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
     animation-iteration-count: infinite;
 }
 
-@keyframes hero-anim-leisure {
+@keyframes hero-anim-contact {
     0%{
-        background-image: url('../picture/leisure-hero.png');
+        background-image: url('../picture/contact-bg.png');
         background-repeat: no-repeat;
         background-size: cover;
     }
 
     65%{
-        background-image: url('../picture/leisure-hero.png');
+        background-image: url('../picture/contact-bg.png');
         background-repeat: no-repeat;
         background-size: cover;
     }
 
     100%{
-        background-image: url('../picture/carousel\ 3.jpeg');
+        background-image: url('../picture/leisure-hero.png');
         background-repeat: no-repeat;
         background-size: cover;
     }
 }
 
-.hero-content-leisure{
+.hero-content-contact{
     background-color: hsla(210, 95%, 5%, 0.88);
-    padding-top: 9rem;
+    padding-top: 11rem;
     padding-left: 50px;
     padding-right: 50px;
-    padding-bottom: 5rem;
+    padding-bottom: 8rem;
 }
 
 .heading{
@@ -43,30 +44,26 @@
     animation-iteration-count: 5;
 }
 
-.leisure-dest{
-    background-color:#F2F8FD;
-}
 
-.leisure-stack1{
-    width:100%;
-}
-
-.leisure-idea{
-    margin-top: -120px!important;
-    padding-top: 200px;
+.form{
     background-image: url('../picture/Rectangle.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-.ideas:hover{
-    box-shadow: 0px 4px 10px rgba(7, 41, 70, 0.8);
-    z-index: 100;
+.label-note{
+    font-size: 12px!important;
+    font-weight: 600;
+}
+
+input, textarea{
+    border-radius: 0px!important;
 }
 
 
-
-
-
-
+.contact-icon{
+    width: 50%!important;
+}
 
 
 
@@ -86,33 +83,42 @@
     }
 
 
-    .hero-content-leisure{
+    .hero-content-contact{
         background-color: hsla(210, 95%, 5%, 0.88);
         padding-left: 20px!important;
         padding-right: 20px!important;
 
     }
 
-    .page-note{
-        padding-left: 20px!important;
-        padding-right: 20px!important;
-        padding-bottom: 0px!important;
-        padding-top: 20px!important;
+    .map{
+        margin-bottom: 0px!important;
     }
 
-    .dest-note, .lux-note{
-        padding: 0px 20px 0px 20px!important;
-    }
-
-
-    .leisure-stack{
-        padding: 5px 20px 5px 20px!important;
+    .location-details{
+        margin-top: 0px!important;
+        padding-top: 0px!important;
+        text-align: center;
     }
 
 
-    .ideas{
-        margin-top: 10px!important  ;
+    .contact-icon{
+        width: 15%!important;
+        margin-bottom: 20px;
     }
+    
+    .detail{
+        text-align: center;
+        margin-top: 30px!important;
+    }
+
+    .contact-form{
+        padding: 20px!important;
+    }
+
+
+
+
+
 
 
  }
@@ -134,18 +140,10 @@
         font-size: 30px;
     }
 
-    .dest-note{
-        padding: 0px 20px 0px 20px!important;
+    .contact-icon{
+        width:100%!important;
+        margin-bottom: 20px;
     }
-
-    .lux-note{
-        padding: 20px 20px 0px 20px!important;
-    }
-
-    .leisure-idea{
-        margin-top: -150px!important;
-    }
-
 
  }
 
