--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -49,7 +49,7 @@ h6{
     cursor: pointer;
 }
 
-hr{
+.footer-line{
     background-color: white;
     opacity: 0.3;
 }
@@ -59,6 +59,16 @@ hr{
     opacity: 0.4;
     font-size: 12px;
 }
+
+
+.footer-link{
+    opacity: 0.9!important;
+    color: white!important;
+    text-decoration: none!important;
+}
+
+
+
 
 
 
