--- a/src/css/visas.css
+++ b/src/css/visas.css
@@ -56,7 +56,7 @@
 
 .card:hover{
     transition: box-shadow 0.7s;
-    box-shadow: 4px 4px 16px rgba(0,0,0,0.5);
+    box-shadow: 0px 4px 16px rgba(0,0,0,0.4);
 }
 
 .card-img-top{
@@ -119,7 +119,7 @@
     }
 
     .mobile-country{
-        display: flex;
+        display: inline;
     }
 
     .desktop-country{
