--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -67,7 +67,9 @@ h6{
     text-decoration: none!important;
 }
 
-
+.foot-logo{
+    width:120%!important;
+}
 
 
 
@@ -98,6 +100,18 @@ h6{
         padding-left: 20px!important;
     }
 
+    .foot-logo{
+        width: 100%!important;
+    }
+
+    .logos-col{
+        padding-top: 5px!important;
+    }
+
+    .our-part{
+        text-align: center;
+        border: none!important;
+    }
 
  }
 
