--- a/src/css/onestop.css
+++ b/src/css/onestop.css
@@ -1,37 +1,37 @@
-.hero-contact{
+.hero-onestop{
     padding: 0px!important;
-    animation-name: hero-anim-contact;
+    animation-name: hero-anim-onestop;
     animation-duration: 20s;
     animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
     animation-iteration-count: infinite;
 }
 
-@keyframes hero-anim-contact {
+@keyframes hero-anim-onestop{
     0%{
-        background-image: url('../picture/contact-bg.png');
+        background-image: url('../picture/corporate bg.png');
         background-repeat: no-repeat;
         background-size: cover;
     }
 
     65%{
-        background-image: url('../picture/contact-bg.png');
+        background-image: url('../picture/leisure-hero.png');
         background-repeat: no-repeat;
         background-size: cover;
     }
 
     100%{
-        background-image: url('../picture/leisure-hero.png');
+        background-image: url('../picture/corporate bg.png');
         background-repeat: no-repeat;
         background-size: cover;
     }
 }
 
-.hero-content-contact{
+.hero-content-onestop{
     background-color: hsla(210, 95%, 5%, 0.88);
-    padding-top: 13rem;
+    padding-top: 9rem;
     padding-left: 50px;
     padding-right: 50px;
-    padding-bottom: 10rem;
+    padding-bottom: 6rem;
 }
 
 .heading{
@@ -45,25 +45,30 @@
 }
 
 
-.form{
-    background-image: url('../picture/Rectangle.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.label-note{
-    font-size: 12px!important;
-    font-weight: 600;
-}
-
-input, textarea{
-    border-radius: 0px!important;
+.manage-trip{
+    background-color: #010e1b;
+    box-shadow: 0px 4px 5px rgba(46,46,46,0.5);
 }
 
 
-.contact-icon{
-    width: 50%!important;
+
+.most-offer-onestop{
+    margin-bottom: 30px;
+    height: 330px;
+    box-shadow: 0px 4px 5px rgba(46,46,46,0.5);
 }
+
+.most-offer-onestop:hover{
+    cursor: pointer;
+    color: white;
+    background-color: #010e1b!important;
+    transition: background-color 0.5s;
+}
+
+
+
+
+
 
 
 
@@ -83,40 +88,23 @@ input, textarea{
     }
 
 
-    .hero-content-contact{
-        padding-top: 9rem;
-        padding-bottom: 5rem;
-        background-color: hsla(210, 95%, 5%, 0.88);
+    .hero-content-onestop{
+        background-color: hsla(210, 95%, 5%, 0.8);
         padding-left: 20px!important;
         padding-right: 20px!important;
-
+        padding-top: 9rem;
+        padding-bottom: 5rem;
     }
 
-    .map{
-        margin-bottom: 0px!important;
-    }
 
-    .location-details{
+    .most-offer-onestop{
+        height: 380px;
         margin-top: 0px!important;
-        padding-top: 0px!important;
-        text-align: center;
     }
 
-
-    .contact-icon{
-        width: 15%!important;
-        margin-bottom: 20px;
+    .effortless{
+        margin-top: 20px!important;
     }
-    
-    .detail{
-        text-align: center;
-        margin-top: 30px!important;
-    }
-
-    .contact-form{
-        padding: 20px!important;
-    }
-
 
 
 
@@ -142,10 +130,16 @@ input, textarea{
         font-size: 30px;
     }
 
-    .contact-icon{
-        width:100%!important;
-        margin-bottom: 20px;
+    .most-offer{
+        margin-top: 20px;
+        height: 280px;
     }
+
+
+
+
+
+
 
  }
 
@@ -154,3 +148,4 @@ input, textarea{
  @media only screen and (min-width:1824px) {
      
  }
+
