--- a/src/css/logistics.css
+++ b/src/css/logistics.css
@@ -86,12 +86,12 @@
 
     .hero-content-logistics{
         background-color: hsla(210, 95%, 5%, 0.8);
-        padding-left: 20px!important;
-        padding-right: 20px!important;
-        padding-top: 7rem;
-        padding-bottom: 5rem;
+        padding-left: 50px!important;
+        padding-right: 50px!important;
+        padding-top: 12rem;
+        padding-bottom: 10rem;
         box-shadow: none;
-
+        text-align: center;
     }
 
 
