--- a/src/css/corporate.css
+++ b/src/css/corporate.css
@@ -93,6 +93,9 @@ ul{
     height: 500px;
     margin-top: 20px;
     box-shadow: 0px 4px 5px rgba(46,46,46,0.5);
+}
+
+.features-2{
     background-color:#F2F8FD;
 }
 
@@ -116,9 +119,10 @@ ul{
 
     .hero-content-corporate{
         background-color: hsla(210, 95%, 5%, 0.8)!important;
-        padding-left: 20px!important;
-        padding-right: 20px!important;
-        padding-top: 6rem!important;
+        padding-left: 50px!important;
+        padding-right: 50px!important;
+        padding-top: 10rem!important;
+        padding-bottom: 7rem!important;
         box-shadow: none;
 
     }
@@ -184,7 +188,11 @@ padding: 0px!important;
     }
 
     .corporate-feature{
-        height: 450px;
+        height: 480px;
+    }
+
+    .corporate-feature img{
+        height: 260px!important;
     }
 
     .other-features{
