--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -41,8 +41,7 @@
 .dropdown-item:hover{
     background-color: #010e1b;
     color: white;
-    border: 2px solid #010e1b;
-    transition: border  2s;
+    transition: background-color 0.5s;
 }
 
 
@@ -87,9 +86,7 @@
 @media only screen and (min-device-width:320px) and (max-device-width:480px){
 
 
-    .dropdown-menu{
-        width: 250px!important;
-    }
+
 
 
 }
