--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -393,6 +393,10 @@
         font-size: 28px;
     }
 
+    .two{
+        text-align: center!important;
+    }
+    
     .hero-main{
         padding: 0px!important;
     }
